# cornerstone

./: .env.example  .env_example  .gitignore  LICENSE  README.md  docker-compose.yml  docker-sync.yml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: PULL_REQUEST_TEMPLATE.md  build-push-deploy.yml  pre-merge.yml
config/docker/: Dockerfile
config/k8s/: deployment.yml
cornerstone/: __init__.py  routes_config.py
cornerstone/core/: routes.py
cornerstone/core/enums/: http_status.py  order_by.py
cornerstone/core/response/: types.py
cornerstone/words/: routes.py
cornerstone/words/request/: types.py
cornerstone/words/response/: types.py
test/: conftest.py  vcr.py
test/fixtures/json/words/request/: incorrect_sort_words_desc.json  incorrect_words.json  sort_words_asc.json  sort_words_desc.json  words.json
test/integration/core/: test_routes.py
test/integration/words/routes/: test_routes.py
test/unit/words/request/: test_types.py
