[metadata]
name = cornerstone
version = 0.0.1
url = cornerstone.maiky.dev
maintainer = Maiky Guanaes
maintainer_email = contato@maiky.dev
description = The Pilar's test case to back-end
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
relative_files = True
source =
    cornerstone

[wheel]
universal = 1

[flake8]
exclude =
    .git,
    __pycache__
    venv/*
    build/*
    .eggs
    *.egg
    dist

max-line-length = 99

[run]
omit =
    venv/*,
    setup.py,
